--- a/app/styles/jobs-schedule.scss
+++ b/app/styles/jobs-schedule.scss
@@ -32,11 +32,20 @@
     .days-to-skip-container {
         margin: 0 0 20px 0;
 
+        h4 {
+            margin: 10px 0;
+        }
+
         .days-list {
             display: flex;
             align-items: center;
-            margin: 10px;
+            margin: 0 10px;
             color: #5d5d5d;
+
+            div {
+                display: flex;
+                align-items: center;
+            }
 
             input {
                 margin: 0 5px 0 0;
@@ -99,5 +108,11 @@
                 }
             }
         }
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .list-item {
+        width: 100% !important;
     }
 }
