--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -51,6 +51,25 @@ input[type="checkbox"]{
     display: none !important;
 }
 
+::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+
 @media only screen and (max-width: 700px) {
     .desktop {
         display: none !important;    
